--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ __pycache__/
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
 
+## Documentation output pdf
+docs/main.pdf
+
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
 *.bcf
